--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ body{
 }
 
 #container_block{
-  height: 233px;
+  height: 240px;
   font-size: 13px;
   background-color: #E1E1E1;
   border: 1px solid #D2D2D2;
@@ -65,6 +65,7 @@ body{
 
 #container_menu{
   background-image: url('../images/templatemo_menu_background.gif');
+  background-position: center top;
   height: 60px;
   text-align:center;
 }
